--- a/package.json
+++ b/package.json
@@ -41,13 +41,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.3",
     "@types/react-router-dom": "^5.3.3",
+    "envify": "^4.1.0",
     "parcel": "^2.9.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "terser": "^5.17.6",
+    "terser-brunch": "^4.1.0",
+    "uglifyify": "^5.0.2"
   }
 }
