--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.1"
   },
+"lint-staged": {
+ "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+   "prettier --write"
+]
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -41,7 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.3",
